Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-755: Make ZooKeeper port list available to input/output format (armax00 via claudio)

  GIRAPH-737: Giraph Application Master: Move to new and stable YARN API (mislam via ereisman)

  GIRAPH-791: HiveGiraphRunner picks -D options too late (majakabiljo)

  GIRAPH-790: Add a way to automatically retry a job (majakabiljo)

  GIRAPH-789: Upgrade hive-io to 0.20 - less metastore accesses (majakabiljo)

  GIRAPH-787: Use HiveIO 1.9 (gmalewicz via aching)

  GIRAPH-786: XSparseVector create a lot of objects in add/write
  (ikabiljo via majakabiljo)

  GIRAPH-773: Cannot use only EdgeOutputFormat (armax00 via claudio)

  GIRAPH-779: Make it easier to reuse objects with hive-io input (majakabiljo)

  GIRAPH-778: Testing with TestGraph is broken (majakabiljo)

  GIRAPH-777: Fix bug from GIRAPH-775 (majakabiljo)

  GIRAPH-776: Update Giraph to use HiveIO 0.18 (gmalewicz via majakabiljo)

  GIRAPH-775: Vertex value combiner (aching)

  GIRAPH-761: GiraphFileInputFormat ignores hidden file filter in
  folders (Manuel Lagang via aching)

  GIRAPH-771: Upgrade hive-io to 0.17 (majakabiljo)

  GIRAPH-756: Provide a way to halt running application (majakabiljo)

  GIRAPH-753: Efficient dense matrix aggregators (herald via apresta)

  GIRAPH-752: Better support for supernodes (majakabiljo)

  GIRAPH-727: Support for Watts Strogatz VertexInputFormat (claudio)

  GIRAPH-746: Track and log versions of dependencies (nitay)

  GIRAPH-751: Build error: convertEdgeToLine in two different classes have the 
  same erasure, yet neither overrides the other (armax00 via claudio)

  GIRAPH-732: EdgeOutputFormat (armax00 via claudio)

  GIRAPH-512: JavaDoc warnings (tdn120 via nitay)

  GIRAPH-736: Bring back FindBugs (nitay)

  GIRAPH-735: DiskBackedPartitionStore throws NPE due to uninitialized OutEdges
  (claudio)

  GIRAPH-734: DiskBackedPartitionStore attempting to release a lock it doesn't own
  (cmuchinsky via claudio)
