@@ -125,7 +125,6 @@ sudo chmod 750 /app/hadoop/tmp</source>
 &lt;property&gt;
 &lt;name&gt;dfs.replication&lt;/name&gt; 
 &lt;value&gt;1&lt;/value&gt; 
-&lt;/description&gt; 
 &lt;/property&gt;</source>Notice that you just set the replication service to make only 1 copy of the files stored in HDFS. This is because you have only one data nodes. The default value is 3 and you will receive run-time exceptions if you do not change it!</li>
       </ul>
       <p>Next, set up SSH for user account <tt>hduser</tt> so that you do not have to enter a passcode every time an SSH connection is started:</p>
@@ -213,14 +212,14 @@ $HADOOP_HOME/bin/hadoop dfs -copyFromLocal /tmp/tiny_graph.txt /user/hduser/inpu
 $HADOOP_HOME/bin/hadoop dfs -ls /user/hduser/input</source>
       <p>We will use <tt>IdWithValueTextOutputFormat</tt> output file format, where each line consists of <tt>source_id length</tt> for each node in the input graph (the source node has a length of 0, by convention). You can now run the example by:</p>
       <source>
-$HADOOP_HOME/bin/hadoop jar $GIRAPH_HOME/giraph-examples/target/giraph-examples-1.1.0-SNAPSHOT-for-hadoop-0.20.203.0-jar-with-dependencies.jar org.apache.giraph.GiraphRunner org.apache.giraph.examples.SimpleShortestPathsComputation -vif org.apache.giraph.io.formats.JsonLongDoubleFloatDoubleVertexInputFormat -vip /user/hduser/input/tiny_graph.txt -of org.apache.giraph.io.formats.IdWithValueTextOutputFormat -op /user/hduser/output/shortestpaths -w 1</source>
+$HADOOP_HOME/bin/hadoop jar $GIRAPH_HOME/giraph-examples/target/giraph-examples-1.1.0-SNAPSHOT-for-hadoop-0.20.203.0-jar-with-dependencies.jar org.apache.giraph.GiraphRunner org.apache.giraph.examples.SimpleShortestPathsComputation -vif org.apache.giraph.io.formats.JsonLongDoubleFloatDoubleVertexInputFormat -vip /user/hduser/input/tiny_graph.txt -vof org.apache.giraph.io.formats.IdWithValueTextOutputFormat -op /user/hduser/output/shortestpaths -w 1</source>
       <p>Notice that the job is computed using a single worker using the argument <tt>-w</tt>. To get more information about running a Giraph job, run the following command:</p>
       <source>$HADOOP_HOME/bin/hadoop jar $GIRAPH_HOME/giraph-examples/target/giraph-examples-1.1.0-SNAPSHOT-for-hadoop-0.20.203.0-jar-with-dependencies.jar org.apache.giraph.GiraphRunner -h</source>
       <p>This will output the following:</p>
       <source>
 usage: org.apache.giraph.utils.ConfigurationUtils [-aw &lt;arg&gt;] [-c &lt;arg&gt;]
        [-ca &lt;arg&gt;] [-cf &lt;arg&gt;] [-eif &lt;arg&gt;] [-eip &lt;arg&gt;] [-h] [-la] [-mc
-       &lt;arg&gt;] [-of &lt;arg&gt;] [-op &lt;arg&gt;] [-pc &lt;arg&gt;] [-q] [-ve &lt;arg&gt;] [-vif
+       &lt;arg&gt;] [-vof &lt;arg&gt;] [-op &lt;arg&gt;] [-pc &lt;arg&gt;] [-q] [-ve &lt;arg&gt;] [-vif
        &lt;arg&gt;] [-vip &lt;arg&gt;] [-vvf &lt;arg&gt;] [-w &lt;arg&gt;] [-wc &lt;arg&gt;] [-yh &lt;arg&gt;]
        [-yj &lt;arg&gt;]
  -aw,--aggregatorWriter &lt;arg&gt;           AggregatorWriter class
@@ -234,10 +233,11 @@ usage: org.apache.giraph.utils.ConfigurationUtils [-aw &lt;arg&gt;] [-c &lt;arg&
  -cf,--cacheFile &lt;arg&gt;                  Files for distributed cache
  -eif,--edgeInputFormat &lt;arg&gt;           Edge input format
  -eip,--edgeInputPath &lt;arg&gt;             Edge input path
+ -eof,--vertexOutputFormat &lt;arg&gt;               Edge output format
  -h,--help                              Help
  -la,--listAlgorithms                   List supported algorithms
  -mc,--masterCompute &lt;arg&gt;              MasterCompute class
- -of,--outputFormat &lt;arg&gt;               Vertex output format
+ -vof,--vertexOutputFormat &lt;arg&gt;               Vertex output format
  -op,--outputPath &lt;arg&gt;                 Vertex output path
  -pc,--partitionClass &lt;arg&gt;             Partition class
  -q,--quiet                             Quiet output
